[project]
name = "mcp-pipedrive"
version = "0.1.0"
description = "MCP server para Pipedrive — gerenciar deals, atividades e follow-ups da YvY Capital"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mcp-pipedrive = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
